feat: show last message and sender username

--- a/ClientApp/src/app/modules/home/Components/chat-item/chat-item.component.css
+++ b/ClientApp/src/app/modules/home/Components/chat-item/chat-item.component.css
@@ -34,3 +34,12 @@
 img {
 	border-radius: 50%;
 }
+
+.colon {
+	padding-left: 2px;
+	padding-right: 4px;
+}
+
+.message-content {
+	color: var(--secondary-text-color);
+}
