--- a/ClientApp/src/app/modules/home/Components/chat-item/chat-item.component.html
+++ b/ClientApp/src/app/modules/home/Components/chat-item/chat-item.component.html
@@ -1,5 +1,9 @@
 <img class="user-icon" [src]="userIcon" alt="user icon">
 <div class="info">
     <div class="full-name"> {{ fullName }}</div>
-    <div class="last-message"> {{ message }}</div>
+    <div class="last-message"> 
+        <span>{{ message.senderUserName }}</span>
+        <span class="colon">:</span>
+        <span class="message-content">{{ message.content }}</span>
+    </div>
 </div>
