--- a/ClientApp/src/styles/variables.css
+++ b/ClientApp/src/styles/variables.css
@@ -7,6 +7,7 @@
 
 	--primary-text-color-dark: black;
 	--primary-text-color-light: white;
+	--secondary-text-color: rgb(170, 170, 170);
 	--reaction-text-color: gray;
 	--primary-placeholder-color-light: rgb(120, 120, 120);
 
