feat: fix new private chat behavior

--- a/ClientApp/src/app/modules/home/Components/chat-item/chat-item.component.html
+++ b/ClientApp/src/app/modules/home/Components/chat-item/chat-item.component.html
@@ -2,8 +2,8 @@
 <div class="info">
     <div class="full-name"> {{ fullName }}</div>
     <div class="last-message"> 
-        <span>{{ message.senderUserName }}</span>
+        <span>{{ message?.senderUserName }}</span>
         <span class="colon">:</span>
-        <span class="message-content">{{ message.content }}</span>
+        <span class="message-content">{{ message?.content }}</span>
     </div>
 </div>
